--- a/dev/scss/_variables.scss
+++ b/dev/scss/_variables.scss
@@ -10,7 +10,7 @@ $breakpoint-desktop-large: 1600px;
 
 $colors: (
   text-color: white,
-  primary-color: #009ddc,
+  primary-color: #429BD6,
   secondary-color: #154a66,
   view-selection-color: #4d5155,
   customized-h2: #154a66,
