--- a/dev/scss/_mixin.scss
+++ b/dev/scss/_mixin.scss
@@ -30,7 +30,7 @@
   background-color: lightgrey;
   color: #696969;
   margin-bottom: 1.5rem;
-  background-image: url(/images/arrow-point-down.png);
+  background-image: url(../images/arrow-point-down.png);
   background-repeat: no-repeat;
   background-position-x: 97%;
   background-position-y: 12px;
