--- a/dev/scss/_product-advisor.scss
+++ b/dev/scss/_product-advisor.scss
@@ -123,7 +123,7 @@
     select {
       @include select-input-whw;
       @include select;
-      background-image: url(/images/down-arrow-blue.png);
+      background-image: url(../images/down-arrow-blue.png);
     }
 
     select option {
@@ -213,7 +213,7 @@
       min-width: 0;
       width: $width;
       @include select;
-      background-image: url(/images/down-arrow-blue.png);
+      background-image: url(../images/down-arrow-blue.png);
     }
 
     select option {
