tried to fix mobile blue wave, problems occur from tablet and upwards... unable to use bbreakpoints? something is being overwritten? up until tablet mobile widths are set and adjusted to maintain a curve similar to that in the mock up.. from tablet to desktop, the width needs to change to 100% or 100vw,, not sure why it stopped working as expected...

--- a/dev/scss/_footer.scss
+++ b/dev/scss/_footer.scss
@@ -5,127 +5,117 @@
 
 // }
 .relative {
-  position: relative;
+    position: relative;
 }
 
 .wave-sky-blue {
-  width: 100vw;
-  padding: 0;
-  margin: 0;
-  transform: translateY(4px);
+    position: absolute;
+    width: 553px;
+    top: -60px;
+    left: -66px;
+    padding: 0;
+    height: 67px;
+    margin: 0;
+
+    transform: scaleY(1.2);
+
+    transform: rotate(2deg);
 }
 
 .logo {
-  width: 150px;
-  display: block;
+    width: 150px;
+    display: block;
 }
 svg {
-  fill: map-get($colors, text-color);
-  margin: 0 0.3rem;
-  align-items: center;
-  justify-content: center;
-  vertical-align: middle;
+    fill: map-get($colors, text-color);
+    margin: 0 0.3rem;
+    align-items: center;
+    justify-content: center;
+    vertical-align: middle;
 }
 
 footer {
-  padding: 0;
-  margin: 0;
-  position: relative;
-  background-color: #244a64;
+    padding: 0;
+    margin: 0;
+    position: relative;
+    background-color: #244a64;
 }
 .blue {
-  text-transform: uppercase;
-  font-family: "Roboto Condensed", sans-serif;
-  padding: 0;
-  margin: 0;
-  height: 200px;
-  background-color: map-get($colors, primary-color);
-  color: map-get($colors, text-color);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-  flex-wrap: nowrap;
+    text-transform: uppercase;
+    font-family: "Roboto Condensed", sans-serif;
+    padding: 0;
+    margin: 0;
+    height: 200px;
+    background-color: map-get($colors, primary-color);
+    color: map-get($colors, text-color);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: nowrap;
 }
 
 .flex-column {
-  display: flex;
-  flex-direction: row;
-  gap: 2rem;
-  justify-content: center;
-  text-align: center;
-  align-items: center;
+    display: flex;
+    flex-direction: row;
+    gap: 2rem;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
 }
 .flex-row {
-  align-items: center;
-  text-align: center;
+    @include flex-row;
+    align-items: center;
+    text-align: center;
 }
 p {
-  padding: 1rem;
-  display: block;
-  text-align: center;
-  vertical-align: baseline;
+    padding: 1rem;
+    display: block;
+    text-align: center;
+    vertical-align: baseline;
 }
 
+@media (min-width: $breakpoint-mobile-wave) {
+    .wave-sky-blue {
+        height: 78px;
+        width: 800px;
+    }
+}
+@media (min-width: $breakpoint-mobile-wave2) {
+    .wave-sky-blue {
+        height: 78px;
+        width: 890px;
+    }
+}
 @media (min-width: $breakpoint-tablet) {
   footer {
-  background-color: map-get($colors, primary-color);
+      background-color: map-get($colors, primary-color);
   }
 
   .blue {
-    flex-direction: row;
+      flex-direction: row;
   }
 
   .wave-sky-blue {
-    transform:translate(0, -35px);
-  }
+      transform: translate(0, 0);
+      width: 100vw;
+      left: 0;
+      display: none;
 
 }
+
 @media (min-width: $breakpoint-desktop) {
-  .flex-container {
-    display: flex;
-    flex-direction: row;
-  }
+    .flex-container {
+        display: flex;
+        flex-direction: row;
+    };
 
-  .wave-sky-blue {
-    transform:translate(0, -70px);
-  }
-}
-// .blue {
-//     flex-direction: row;
-// }
-// .flex-container {
-//     display: flex;
-//     flex-direction: column;
-//     justify-content: center;
-//     text-align: center;
-//     align-items: center;
-//     // display: inline-flex;
-// }
-// .flex-column {
-//     display: flex;
-//     flex-direction: row;
-//     gap: 2rem;
-//     justify-content: center;
-//     text-align: center;
-//     align-items: center;
-// }
-// .flex-row {
-//     align-items: center;
-// }
+    .wave-sky-blue{ 
+      transform: translate(0, -70px);
+      width: 100vw;
+      bottom: 0;
+    
+       
+    };
+};
 
-// footer {
-//     position: absolute;
-
-//     background-color: #244a64;
-//     // .wave-sky-blue {
-//     //     position: absolute;
-//     //     top: 0;
-//     //     left: 0;
-//     //     max-width: 100%;
-//     // }
-//     .logo {
-//         width: 100px;
-//         z-index: 2;
-//     }
-// }
