--- a/dev/scss/_variables.scss
+++ b/dev/scss/_variables.scss
@@ -1,20 +1,26 @@
+/** @format */
+
 //font family
 $heading-font: "Roboto Condensed", sans-serif;
 $body-content-font: "Roboto", sans-serif;
 
 //media query breakpoints
+$breakpoint-mobile-wave: 476px;
+$breakpoint-mobile-wave2: 576px;
+
 $breakpoint-mobile: 640px;
+
 $breakpoint-tablet: 768px;
 $breakpoint-desktop: 1024px;
 $breakpoint-desktop-large: 1600px;
 
 $colors: (
-  text-color: white,
-  primary-color: #429BD6,
-  secondary-color: #154a66,
-  view-selection-color: #4d5155,
-  customized-h2: #154a66,
-  header-bg: rgba(0, 0, 0, 0.7),
+    text-color: white,
+    primary-color: #429bd6,
+    secondary-color: #154a66,
+    view-selection-color: #4d5155,
+    customized-h2: #154a66,
+    header-bg: rgba(0, 0, 0, 0.7),
 );
 
 //customized section
